--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'payda';
+  src: url('./../public/fonts/PEYDA-MEDIUM.TTF'),
+       
+  /* Add more src lines for additional font formats if needed */
+}
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --font-family-body: 'payda', sans-serif;
+  --bg:white;
+  --textColor:black;
+  --softBg:#f0f0f0;
+  -softTextColor:#626262
+}
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  max-width: 100vw;
+  overflow: hidden;
+  font-family: var(--font-family-body);
+  
+}
+a{
+  text-decoration: none;
+  color: inherit;
+}
+.wrapper{
+  min-height: 100vh;
+  background-color: var(--bg);
+  color: var(--textColor);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
