--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
 .quill{
   
 border-radius: 10px !important;
-  background-color: #ffff !important;
+  /* background-color: #ffff !important; */
   outline: none !important;
   height: auto !important;
   border: 1px solid rgb(133, 128, 128) !important;
@@ -42,7 +42,7 @@ outline: none !important;
 /* Snow Theme */
  .ql-snow .ql-toolbar {
   display: block;
-  background: #eee3e3 !important;
+  /* background: #eee3e3 !important; */
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
   border-radius: 10px !important;
@@ -77,7 +77,27 @@ outline: none !important;
  margin: auto !important;
 
 }
+button:hover .ql-stroke,
+.ql-picker-label:hover .ql-stroke {
+  fill: none;
+  stroke: red !important;
+}
 
+.ql-active .ql-stroke {
+  fill: none;
+  stroke: red !important;
+}
+
+button:hover .ql-fill,
+.ql-picker-label:hover .ql-fill {
+  fill: red !important;
+  stroke: none;
+}
+
+.ql-active .ql-fill {
+  fill: red !important;
+  stroke: none;
+}
 
 
 :root {
@@ -93,7 +113,8 @@ outline: none !important;
   --light-purple:rgb(186, 156, 253);
   --light-pink: rgb(253, 186, 210);
   --light-green: rgb(149, 220, 149);
-  --input-bg:rgb(246, 246, 252);
+  --input-bg:rgb(226 232 240);
+  --input-bg2:rgb(226 232 240);
   --red-btn:#ff5757;
   --lightPurple:#27095f80;
   --ligthBlue:#EEF7FE;
@@ -113,7 +134,8 @@ outline: none !important;
   --light-purple: rgb(96, 75, 148);
   --light-pink:rgb(148, 87, 96);
   --light-green:rgb(108, 148, 108);
-  --input-bg:rgb(246, 246, 252);
+  --input-bg:#38304d;
+  --input-bg2:#564977;
   --red-btn:#ff0000;
 
  
@@ -130,8 +152,8 @@ body{
   
   
   font-family: var(--font-family-body);
-  background-color: var( --bg);
-  color: var(--textColor);
+  background-color: var( --bg) !important;
+  color: var(--textColor) !important;
 
   
 }
@@ -139,11 +161,11 @@ a{
   text-decoration: none;
   color: inherit;
 }
-.wrapper{
+/* .wrapper{
   min-height: 100vh;
   background-color: var(--bg);
   color: var(--textColor);
-}
+} */
 /* .quill{
 border: none !important;
 border-radius: 10px !important;
