--- a/app/globals.css
+++ b/app/globals.css
@@ -211,6 +211,15 @@ a{
   text-decoration: none;
   color: inherit;
 }
+/* swiper*/
+.swiper-pagination-bullet{
+  width: 12px !important;
+  height: 12px !important;
+  border-radius: 50%;
+  background: var( --icons) !important;
+  opacity: 1;
+  margin: 0 5px;
+}
 input{
 /* background-color: #2e255f !important; */
 }
