--- a/app/globals.css
+++ b/app/globals.css
@@ -150,7 +150,7 @@ button:hover .ql-fill,
   --icons:rgb(213, 108, 245);
   --iconDisable:rgba(213, 108, 245, 0.527);
   --loginBg:#BEBEBE;
-  --light-blue:rgb(186, 230, 253);
+  --light-blue:rgb(141, 177, 197);
   --light-purple:rgb(186, 156, 253);
   --light-pink: rgb(253, 186, 210);
   --light-green: rgb(149, 220, 149);
@@ -158,7 +158,7 @@ button:hover .ql-fill,
   --input-bg2:rgb(226 232 240);
   --red-btn:#ff5757;
   --lightPurple:#27095f80;
-  --ligthBlue:#EEF7FE;
+  --ligthBlue:#89a9c2;
   --textPurple:#A39FB4;
   --hlight-blue:rgb(77, 116, 152);
   --hlight-purple: rgb(96, 75, 148);
