--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,7 @@ outline: none !important;
   outline: none !important;
   height: 500px !important;
   border-radius: 10px !important;
+  color: black !important;
 }
 .ql-editor .ql.blank{
   outline: none !important;
